KAS-4445 Fix issue where ember-powerselect dropdown was not visible within au-modal components

--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -77,11 +77,9 @@ table tr.lt-expanded-row {
   padding: 0 1rem 0 1rem;
 }
 
-// When using auk-modal, the ember power select wormhole is behind the modal
-// auk-modal has z-index of 1600;
-
+// When using au-modal, the ember power select wormhole is behind the modal so we use the $ember-power-select-dropdown-z-index value from ember-appuniversum here to fix this
 .ember-power-select-dropdown {
-  z-index: $z-index-modal-additive + $z-index-dropdown;
+  z-index: 10000;
 }
 
 
